--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,7 +9,8 @@
 /jack_in_the_box/
 /my_first_swing_gui/
 /photo_quiz/
+/pong/
+/sketch_190501a/
 /sound_effects_machine/
 /spinning_record/
-/sketch_190501a/
-/pong/
+/magic_worms/
